# majesteescoin

./: .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  bitcoin-qt.pro  configure.ac
build_msvc/: README.md
contrib/: README.md  gitian-build.py  gitian-build.sh  install_db4.sh  tidy_datadir.sh
depends/: README.md  description.md
doc/: Doxyfile  JSON-RPC-interface.md  README.md  README_osx.md  README_windows.txt  REST-interface.md  Tor.txt  assets-attribution.md  benchmarking.md  build-freebsd.md  build-msw.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  litecoin-conf.md  readme-qt.rst  reduce-traffic.md  release-notes-litecoin.md  release-notes-majestee.md  release-notes.md  release-process.md  tor.md  travis-ci.md  unit-tests.md  zmq.md
doc/man/: Makefile.am  litecoin-tx.1  majestee-cli.1  majestee-qt.1  majestee-tx.1  majesteed.1  majestees-cli.1  majestees-qt.1  majestees-wallet.1  majesteesd.1
qa/: README.md
share/: setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  main.cpp  makefile.linux-mingw  (+14 more)
(+286 files in other folders)
